--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.google.android.gms:play-services:7.3.0'
-
+    compile 'com.android.support:design:22.2.0'
     compile 'com.pushbots:pushbots-lib:2.0.13@aar'
 
 
