--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,10 @@
         </activity>
         <activity
             android:name=".detail.MainActivityDetail"
-            android:label="@string/title_activity_main_activity_detail" >
+            android:parentActivityName=".MainActivity" >
+            <!-- To support below API Level 14 -->
+            <meta-data android:name="android.support.UI_OPTIONS"
+                android:value="splitActionBarWhenNarrow" />
         </activity>
         <activity
             android:name=".itemclick.MainActivityClick"
