--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".detail.MainActivityDetail"
             android:parentActivityName=".MainActivity" >
@@ -81,13 +92,14 @@
             android:exported="false" />
 
         <activity
-            android:name=".tab.MainActivitySoko"
-            android:label="@string/title_activity_main_activity_soko" >
-        </activity>
-
-        <activity
             android:name=".search.MainActivity"
-            android:label="Tafuta" >
+            android:label="Tafuta"
+            android:parentActivityName=".MainActivity" >
+
+            <!-- To support below API Level 14 -->
+            <meta-data
+                android:name="android.support.UI_OPTIONS"
+                android:value="splitActionBarWhenNarrow" />
         </activity>
     </application>
 
