The best is coming out one of the best achievement made so far with google analytics

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "sokohuru.muchbeer.king.sokohurutab"
+        applicationId "king.muchbeer.sokohuru"
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 5
